Refactor to avoid using css styling in js files in favour of using the right components (with a couple of exceptions in App.css)

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,14 @@
 }
 
 .row {
-  padding-top: 5px;
+  margin-top: 5px;
   align-items: center;
+}
+
+.btn-success {
+  margin-top: 5px;
+}
+
+.hidden {
+  display: none
 }
